:construction: feat: construcao da header

--- a/index.html
+++ b/index.html
@@ -10,15 +10,25 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <meta property="og:title" content="" />
         <meta property="og:description" content="" />
-        <meta property="og:image" content="./public/assets/disney-banner 1.png"/>
+        <meta property="og:image" content="./public/assets/"/>
         <meta property="og:url" content="site/public/assets/" />
         <meta property="og:type" content="website" />
         <meta name="twitter:card" content="summary_large_image" />
-        <title>Disney</title>
+        <title>Natalistico</title>
     </head>
     <body>
         <header>
-
+            <header>
+                <img src="./public/assets/arvore-de-natal.png" alt="Logo" />
+                <h1>Feliz Natal!!!</h1>
+                <nav>
+                    <ul>
+                        <li><a href="#">Início</a></li>
+                        <li><a href="#">Curiosidade</a></li>
+                        <li><a href="#">Galeria</a></li>
+                    </ul>
+                </nav>
+            </header>
         </header>
         <main>
 
