:lipstick:feat: estilizacao da header

--- a/index.html
+++ b/index.html
@@ -1,39 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="./public/src/styles/style.css" />
-        <link rel="icon" href="./public/assets/path/to/favicon.ico" type="image/x-icon" />
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <meta property="og:title" content="" />
-        <meta property="og:description" content="" />
-        <meta property="og:image" content="./public/assets/"/>
-        <meta property="og:url" content="site/public/assets/" />
-        <meta property="og:type" content="website" />
-        <meta name="twitter:card" content="summary_large_image" />
-        <title>Natalistico</title>
-    </head>
-    <body>
-        <header>
-            <header>
-                <img src="./public/assets/arvore-de-natal.png" alt="Logo" />
-                <h1>Feliz Natal!!!</h1>
-                <nav>
-                    <ul>
-                        <li><a href="#">Início</a></li>
-                        <li><a href="#">Curiosidade</a></li>
-                        <li><a href="#">Galeria</a></li>
-                    </ul>
-                </nav>
-            </header>
-        </header>
-        <main>
 
-        <footer>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./public/src/styles/style.css" />
+    <link rel="icon" href="./public/assets/path/to/favicon.svg" type="image/x-icon" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta property="og:title" content="" />
+    <meta property="og:description" content="" />
+    <meta property="og:image" content="./public/assets/" />
+    <meta property="og:url" content="site/public/assets/" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <title>Natalistico</title>
+</head>
 
-        </footer>
-    </body>
+<body>
+    <header>
+        <div class="header-container">
+            <img src="./public/assets/arvore-de-natal.png" alt="Logo" />
+            <h1>Feliz Natal!!!!</h1>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="#">Início</a></li>
+                <li><a href="#">Curiosidade</a></li>
+                <li><a href="#">Galeria</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        
+    </main>
+    <footer>
+
+    </footer>
+</body>
+
 </html>
