:lipstick:feat: estilizacao da header

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </nav>
     </header>
     <main>
-        
+        <img src="./public/assets/natal-producao.png" alt="Imagem de produção de natal" />
     </main>
     <footer>
 
