--- a/index.html
+++ b/index.html
@@ -33,7 +33,18 @@
         </nav>
     </header>
     <main>
-        <img src="./public/assets/natal-producao.png" alt="Imagem de produção de natal" />
+        <section>
+            <img src="./public/assets/natal-producao.png" alt="Imagem de produção de natal" />
+            <article>
+                <img src="./public/assets/globo-de-neve.png" alt="Globo de neve" />
+                <p>
+                    A origem do globo de neve é incerta, mas acredita-se que tenha surgido na Europa no século XIX, tornando-se um símbolo de magia, afeto e encantamento, especialmente no Natal, trazendo um toque de nostalgia e maravilha para as celebrações e encantando gerações ao redor do mundo.
+                </p>
+            </article>
+        </section>
+        <section>
+            <img src="./public/assets/cidades-para-viajar-no-natal5-1.png" alt="Imagem de cidades para viajar no natal" />
+        </section>
     </main>
     <footer>
 
