--- a/index.html
+++ b/index.html
@@ -20,35 +20,38 @@
 
 <body>
     <header>
-        <div class="header-container">
-            <img src="./public/assets/arvore-de-natal.png" alt="Logo" />
-            <h1>Feliz Natal!!!!</h1>
+        <div class="header">
+            <div class="header-container">
+                <img src="./public/assets/arvore-de-natal.png" alt="Logo" />
+                <h1>Feliz Natal!!!!</h1>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="#">Início</a></li>
+                    <li><a href="#">Curiosidade</a></li>
+                    <li><a href="#">Galeria</a></li>
+                </ul>
+            </nav>
         </div>
-        <nav>
-            <ul>
-                <li><a href="#">Início</a></li>
-                <li><a href="#">Curiosidade</a></li>
-                <li><a href="#">Galeria</a></li>
-            </ul>
-        </nav>
+        <img src="./public/assets/natal-producao.png" alt="Imagem de produção de natal" class="header-image" />
     </header>
     <main>
-        <section>
-            <img src="./public/assets/natal-producao.png" alt="Imagem de produção de natal" />
+        <section class="section-container">
             <article>
                 <img src="./public/assets/globo-de-neve.png" alt="Globo de neve" />
                 <p>
-                    A origem do globo de neve é incerta, mas acredita-se que tenha surgido na Europa no século XIX, tornando-se um símbolo de magia, afeto e encantamento, especialmente no Natal, trazendo um toque de nostalgia e maravilha para as celebrações e encantando gerações ao redor do mundo.
+                    A origem do globo de neve é incerta, mas acredita-se que tenha surgido na Europa no século XIX,
+                    tornando-se um símbolo de magia, afeto e encantamento, especialmente no Natal, trazendo um toque de
+                    nostalgia e maravilha para as celebrações e encantando gerações ao redor do mundo.
                 </p>
             </article>
         </section>
-        <section>
-            <img src="./public/assets/cidades-para-viajar-no-natal5-1.png" alt="Imagem de cidades para viajar no natal" />
+        <section class="gallery-container">
+            <img src="./public/assets/cidades-para-viajar-no-natal5-1.png"
+                alt="Imagem de cidades para viajar no natal" />
+            <img src="./public/assets/atracoes-do-natal-luz-em-gramado-2.png"
+                alt="Imagem de atrações do natal luz em gramado" />
+            <img src="./public/assets/cidades-para-viajar-no-natal-3.png"
+                alt="Imagem de cidades para viajar no natal" />
         </section>
     </main>
-    <footer>
-
-    </footer>
-</body>
-
-</html>
