:construction: feat: construcao do footer

--- a/index.html
+++ b/index.html
@@ -55,3 +55,31 @@
                 alt="Imagem de cidades para viajar no natal" />
         </section>
     </main>
+    <footer>
+        <div class="footer-contact">
+            <a href="https://www.linkedin.com/in/eduardogomes377/" target="_blank" rel="noopener noreferrer">
+                <img src="./public/assets/linkdin.png" alt="linkdin" />
+            </a>
+            <a href="http://www.instagram.com" target="_blank" rel="noopener noreferrer">
+                <img src="./public/assets/instagram.png" alt="instagram" />
+            </a>
+            <a href="https://github.com/Eduardo377/Eduardo377" target="_blank" rel="noopener noreferrer">
+                <img src="./public/assets/github.png" alt="github" />
+            </a>
+        </div>
+        <div class="footer-info">
+            <p>Desenvolvido por Eduardo Gomes</p>
+            <p>
+                <a href="https://www.linkedin.com/in/karynne-moreira-4865905a/" target="_blank" rel="noopener noreferrer">
+                    Instrutora: Karynne Moreira
+                </a>
+            </p>
+            <p>
+                <a href="hhttps://www.linkedin.com/in/samuel-silveriom/" target="_blank" rel="noopener noreferrer">
+                    Facilitadores: Samuel Silverio
+                </a>
+            </p>
+            <p>Layout criado para fins natalistícos na escola vai na web</p>
+        </div>
+        <img src="./public/assets/presente.png" alt="imagem de presente" class="footer-image" />
+    </footer>
