:lipstick: feat: Estilização

--- a/index.html
+++ b/index.html
@@ -1,85 +1,91 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./public/src/styles/style.css" />
-    <link rel="icon" href="./public/assets/path/to/favicon.svg" type="image/x-icon" />
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta property="og:title" content="" />
-    <meta property="og:description" content="" />
-    <meta property="og:image" content="./public/assets/" />
-    <meta property="og:url" content="site/public/assets/" />
-    <meta property="og:type" content="website" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <title>Natalistico</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="./public/src/styles/style.css" />
+        <link rel="icon" href="./public/assets/path/to/favicon.svg" type="image/x-icon" />
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <meta property="og:title" content="" />
+        <meta property="og:description" content="" />
+        <meta property="og:image" content="./public/assets/" />
+        <meta property="og:url" content="site/public/assets/" />
+        <meta property="og:type" content="website" />
+        <meta name="twitter:card" content="summary_large_image" />
+        <title>Natalistico</title>
+    </head>
 
-<body>
-    <header>
-        <div class="header">
-            <div class="header-container">
-                <img src="./public/assets/arvore-de-natal.png" alt="Logo" />
-                <h1>Feliz Natal!!!!</h1>
+    <body>
+        <header>
+            <div class="header">
+                <div class="header-container">
+                    <img src="./public/assets/arvore-de-natal.png" alt="Logo" />
+                    <h1>Feliz Natal!!!!</h1>
+                </div>
+                <nav>
+                    <ul>
+                        <li><a href="#">Início</a></li>
+                        <li><a href="#">Curiosidade</a></li>
+                        <li><a href="#">Galeria</a></li>
+                    </ul>
+                </nav>
             </div>
-            <nav>
-                <ul>
-                    <li><a href="#">Início</a></li>
-                    <li><a href="#">Curiosidade</a></li>
-                    <li><a href="#">Galeria</a></li>
-                </ul>
-            </nav>
-        </div>
-        <img src="./public/assets/natal-producao.png" alt="Imagem de produção de natal" class="header-image" />
-    </header>
-    <main>
-        <section class="section-container">
-            <article>
-                <img src="./public/assets/globo-de-neve.png" alt="Globo de neve" />
+            <img src="./public/assets/natal-producao.png" alt="Imagem de produção de natal" class="header-image" />
+        </header>
+        <main>
+            <section class="section-container">
+                <article>
+                    <img src="./public/assets/globo-de-neve.png" alt="Globo de neve" />
+                    <p>
+                        A origem do globo de neve é incerta, mas acredita-se que tenha surgido na Europa no século XIX,
+                        tornando-se um símbolo de magia, afeto e encantamento, especialmente no Natal, trazendo um toque de
+                        nostalgia e maravilha para as celebrações e encantando gerações ao redor do mundo.
+                    </p>
+                </article>
+            </section>
+            <section class="gallery-container">
+                <img src="./public/assets/cidades-para-viajar-no-natal5-1.png"
+                    alt="Imagem de cidades para viajar no natal" class="image-2" />
+                <img src="./public/assets/atracoes-do-natal-luz-em-gramado-2.png"
+                    alt="Imagem de atrações do natal com luzes." class="image-3" />
+                <img src="./public/assets/cidades-para-viajar-no-natal-3.png"
+                    alt="Imagem de cidades para viajar no natal" />
+            </section>
+        </main>
+        <footer>
+            <div class="footer-contact">
+                <a href="https://www.linkedin.com/in/eduardogomes377/" target="_blank" rel="noopener noreferrer">
+                    <img src="./public/assets/linkdin.png" alt="linkdin" />
+                </a>
+                <a href="http://www.instagram.com" target="_blank" rel="noopener noreferrer">
+                    <img src="./public/assets/instagram.png" alt="instagram" />
+                </a>
+                <a href="https://github.com/Eduardo377/Eduardo377" target="_blank" rel="noopener noreferrer">
+                    <img src="./public/assets/github.png" alt="github" />
+                </a>
+            </div>
+            <div class="footer-info">
+                <p>Desenvolvido por Eduardo Gomes</p>
                 <p>
-                    A origem do globo de neve é incerta, mas acredita-se que tenha surgido na Europa no século XIX,
-                    tornando-se um símbolo de magia, afeto e encantamento, especialmente no Natal, trazendo um toque de
-                    nostalgia e maravilha para as celebrações e encantando gerações ao redor do mundo.
+                    <a href="https://www.linkedin.com/in/karynne-moreira-4865905a/" target="_blank" rel="noopener noreferrer">
+                        Instrutora: Karynne Moreira
+                    </a>
                 </p>
-            </article>
-        </section>
-        <section class="gallery-container">
-            <img src="./public/assets/cidades-para-viajar-no-natal5-1.png"
-                alt="Imagem de cidades para viajar no natal" />
-            <img src="./public/assets/atracoes-do-natal-luz-em-gramado-2.png"
-                alt="Imagem de atrações do natal luz em gramado" />
-            <img src="./public/assets/cidades-para-viajar-no-natal-3.png"
-                alt="Imagem de cidades para viajar no natal" />
-        </section>
-    </main>
-    <footer>
-        <div class="footer-contact">
-            <a href="https://www.linkedin.com/in/eduardogomes377/" target="_blank" rel="noopener noreferrer">
-                <img src="./public/assets/linkdin.png" alt="linkdin" />
-            </a>
-            <a href="http://www.instagram.com" target="_blank" rel="noopener noreferrer">
-                <img src="./public/assets/instagram.png" alt="instagram" />
-            </a>
-            <a href="https://github.com/Eduardo377/Eduardo377" target="_blank" rel="noopener noreferrer">
-                <img src="./public/assets/github.png" alt="github" />
-            </a>
-        </div>
-        <div class="footer-info">
-            <p>Desenvolvido por Eduardo Gomes</p>
-            <p>
-                <a href="https://www.linkedin.com/in/karynne-moreira-4865905a/" target="_blank" rel="noopener noreferrer">
-                    Instrutora: Karynne Moreira
-                </a>
-            </p>
-            <p>
-                <a href="hhttps://www.linkedin.com/in/samuel-silveriom/" target="_blank" rel="noopener noreferrer">
-                    Facilitadores: Samuel Silverio
-                </a>
-            </p>
-            <p>Layout criado para fins natalistícos na escola vai na web</p>
-        </div>
-        <img src="./public/assets/presente.png" alt="imagem de presente" class="footer-image" />
-    </footer>
+                <p>
+                    <a href="hhttps://www.linkedin.com/in/samuel-silveriom/" target="_blank" rel="noopener noreferrer">
+                        Facilitadores: Samuel Silverio
+                    </a>
+                </p>
+                <p>Layout criado para fins natalistícos na escola 
+                    <a href="https://www.linkedin.com/company/vainaweb/posts/?feedView=all" target="_blank" rel="noopener noreferrer">
+                        Vai na Web
+                    </a>
+                </p>
+            </div>
+            <img src="./public/assets/presente.png" alt="imagem de presente" class="footer-image" />
+        </footer>
+    </body>
+</html>
